--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </tbody>
       </table>
     </div>
-    <script src="./FormApp/js/dom.js"></script>
-    <script src="./FormApp/js/main.js"></script>
+    <script src="./js/dom.js"></script>
+    <script src="./js/main.js"></script>
   </body>
 </html>
